Fix portrait photos being cropped in advanced lightbox

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1676,10 +1676,8 @@ main {
 
 .advanced-lightbox-photo img {
   display: block;
-  max-width: 100%;
-  max-height: 100%;
-  width: auto;
-  height: auto;
+  width: 100%;
+  height: 100%;
   object-fit: contain;
 }
 
